<resources>
    <string name="app_name">Autokatta</string>
    <string name="search_hint">Search</string>
    <string name="no_data">No Data Found</string>
    <string name="action_settings">Settings</string>
    <string name="base_url">http://autokatta.acquiscent.com/api/AutoKattaWebService/</string>
    <string name="permission">Autokatta allows your permissions to access your data</string>
    <string name="specification_note">Note:-Standard Specification As Per Manufacturer</string>
    <string name="not_mentioned">Not Mentioned</string>
    <string name="Rs">₹:</string>
    <string name="bid_increment">000000Rs</string>
    <string name="bid_received">Bid not received yet</string>
    <string name="bid_status">You are not highest bidder for this vehicle</string>
    <string name="text_search">Enter your search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="to"> <b>TO</b> </string>
    <string name="post">Post</string>
    <string name="select_picture">Select Picture</string>
    <string name="test_drive">Test Drive</string>
    <string name="manual_enquiry">Manual Enquiry</string>
    <string name="new_dealer">New Dealer</string>
    <string name="manual_add">Add</string>
    <string name="new_vehicle_done">Done</string>
    <string name="try_again">Try again</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="autokatta_contacts">My Autokatta Contacts</string>
    <string name="groups">Group (s)</string>
    <string name="store">Store</string>
    <string name="my_store">My Store</string>
    <string name="browse_store">Browse Store</string>
    <string name="search_store">Search Store</string>
    <string name="vehicle">Vehicle</string>
    <string name="used_vehicle">Used Vehicle</string>
    <string name="new_vehicle">New Vehicle</string>
    <string name="upload_vehicle">Upload Vehicle</string>
    <string name="search_vehicle">Search Vehicle</string>
    <string name="search_new_vehicle">Search New Vehicle</string>
    <string name="my_search">My Search</string>
    <string name="my_uploaded_vehicle">My Uploaded Vehicles</string>
    <string name="my_inventory_catalog">My Inventory/Catalog</string>
    <string name="auction">Auction</string>
    <string name="create_event">Create Event</string>
    <string name="my_active_event">My Active Event</string>
    <string name="my_upcoming_event">My Upcoming Event</string>
    <string name="my_saved_event">My Saved Event</string>
    <string name="ended_event">My Ended event</string>
    <string name="black_listed_members">My Blacklisted Members</string>
    <string name="other">Other</string>
    <string name="broadcast_groups">Broadcast Groups</string>
    <string name="broadcast_message">My Broadcast Messages</string>
    <string name="business_chat">Business Chat</string>
    <string name="locality">Locality</string>
    <string name="change_language">Change Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_my_autokatta_contacts">MyAutokattaContacts</string>
    <string name="alert_title">Confirmation</string>
    <string name="alert_msg">Do you Want To Close The App?</string>
    <string name="sign_out_message">Do you Want To Sign Out?</string>
    <string name="about">About</string>
    <string name="worked_at">Worked At</string>
    <string name="address">Address</string>
    <string name="address_manual">Address<font color='#FF0000'>\u002A</font></string>
    <string name="exchange">Exchange</string>
    <string name="finance">Finance</string>
    <string name="company_name">Company Name</string>
    <string name="designation">Designation</string>
    <string name="skills">Skills</string>
    <string name="contact_no">Contact</string>
    <string name="contact_enquiry">Contact<font color='#FF0000'>\u002A</font></string>
    <string name="email">Email</string>
    <string name="website">WebSite</string>
    <string name="interest">Interest</string>
    <string name="edit">Edit</string>
    <string name="group_alert"><font color='#FF0000'>1. IGNITION package of price is 750/- per month gives you unlimited uploads, Unlimited groups, unlimited stores. Payment options will be monthly, quarterly, half yearly and annually.</font></string>
    <string name="create_store">Create Store</string>
    <string name="unfollow" translatable="false">Un-follow</string>
    <string name="title_activity_upload_vehicle">UploadVehicle</string>
    <string name="my_preference">Autokatta</string>
    <string name="firstRun">FirstRun</string>
    <string name="category">Category</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="search_contact">search contacts</string>
    <string name="title_activity_groups_tab">GroupsTab</string>
    <string name="title_activity_my_store_list">MyStoreListActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search_button">Search</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="enquiry_form">Enquiry Form</string>
    <string name="first_name">First Name</string>
    <string name="name">Name<font color='#FF0000'>\u002A</font></string>
    <string name="userName">Name</string>
    <string name="last_name">Last Name</string>
    <string name="surname">Surname</string>
    <string name="go_profile">Go Profile</string>
    <string name="select">Select<font color='#FF0000'>\u002A</font></string>
    <string name="selectStatus">Select Status</string>
    <string name="completeAddress_manual">Complete Address<font color='#FF0000'>\u002A</font></string>
    <string name="completeAddress">Complete Address</string>
    <string name="discussion">Discussion</string>
    <string name="discussion1">Discussion<font color='#FF0000'>\u002A</font></string>
    <string name="followdate">Follow-up Date</string>
    <string name="followdate1">Follow-up Date<font color='#FF0000'>\u002A</font></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="Query" translatable="false">Query</string>
    <string name="select_option">Select Option</string>
    <string name="show_qr">Show QR Code</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="select_language">Select Language/आपली भाषा निवडा</string>
    <string name="marathi">मराठी</string>
    <string name="english">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="username">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_forget__password">Forget Password</string>
    <string name="title_activity_continue_registration">About US</string>
    <string name="no_internet">No Internet Connection&#8230;</string>
    <string name="_404">We are unable to process the request due to network delays&#8230;</string>
    <string name="_404_">Delay In Network&#8230;</string>
    <string name="no_response">No response from server&#8230;try again!!!</string>
    <string name="no_patient">No patient added&#8230;please add patient!!!</string>
    <string name="err_username">username required</string>
    <string name="err_password">password required</string>
    <string name="err_confirm_password">Confirm password required</string>
    <string name="err_doctor">name required</string>
    <string name="err_address">address required</string>
    <string name="err_area">area required</string>
    <string name="err_mobile">mobile required</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_browse_store">BrowseStoreActivity</string>
    <string name="title_activity_vehicle_upload">VehicleUpload</string>
    <string name="title_activity_search_store">SearchStore</string>
    <string name="title_activity_my_search">MySearchActivity</string>
    <string name="title_activity_my_uploaded_vehicles">MyUploadedVehiclesActivity</string>
    <string name="title_activity_my_active_events_tab">MyActiveEventsTabActivity</string>
    <string name="title_activity_my_saved_auction_event">MySavedAuctionEventActivity</string>
    <string name="title_activity_black_listed_member">BlackListedMemberActivity</string>
    <string name="title_activity_my_upcoming_events_tab">MyUpcomingEventsTabActivity</string>
    <string name="title_activity_create_event">create_event</string>
    <string name="title_activity_my_broadcast_groups">MyBroadcastGroupsActivity</string>
    <string name="title_activity_otp">OTP Activity</string>
    <string name="title_activity_new_password">New Password Activity</string>
    <string name="vehicle_no">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="sub_category">Sub Category</string>
    <string name="model_no">Model Number</string>
    <string name="brand">Brand</string>
    <string name="version">Version</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="tax_validity">Tax Validity</string>
    <string name="fitness_validity">Fitness Validity</string>
    <string name="permit_validity">Permit Validity</string>
    <string name="permit">Permit</string>
    <string name="insurance_date">Insurance Date</string>
    <string name="puc">PUC</string>
    <string name="last_service_date">Last Service Date</string>
    <string name="next_service_date">Next Service Date</string>
    <string name="search_result_new">New Vehicle Search Result</string>
    <string name="no_register">Reg No</string>
    <string name="price">Price</string>
    <string name="model">Model</string>
    <string name="stock_type">Stock Type</string>
    <string name="brand_no">Brand</string>
    <string name="updated_by">Uploaded By</string>
    <string name="updated_date">Uploaded Date</string>
    <string name="location">Location</string>
    <string name="rto_city">RTO City</string>
    <string name="year_of_mfg">Year Of Mfg</string>
    <string name="kms_hrs">KMS/HRS</string>
    <string name="title_activity_my_ended_event">MyEndedEventActivity</string>
    <string name="title_activity_group_tabs">GroupTabs</string>
    <string name="no_of_vehicle">No.of vehicle</string>
    <string name="start">Start</string>
    <string name="end">End\t</string>
    <string name="times">Time</string>
    <string name="special_clauses">Special clauses</string>
    <string name="auction_title">Auction Title :</string>
    <string name="store_name">Store Name</string>
    <string name="names">Name</string>
    <string name="type_of_auction">Type Of Auction</string>
    <string name="enquiry">Enquiry</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="confirm_vehicles">Confirm Vehicles</string>
    <string name="message2">Do you want show start price?</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="confirm">Confirm</string>
    <string name="date_of_message">Date Of Message</string>
    <string name="sample">Sample</string>
    <string name="date_and_time">Date and Time</string>
    <string name="sold">Sold</string>
    <string name="view_quot">View Quotation</string>
    <string name="transfer_stock">Transfer Stock</string>
    <string name="send_quot">Send Quot</string>
</resources>