<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <Button
        android:id="@+id/view_quotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_quot"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/transfer_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_stock"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/offerrecived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Offer Recived"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/quotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_quot"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/Enquiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enquiry"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sold"
        android:background="@android:color/transparent" />


</LinearLayout>