<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="7dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/dateTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_textview_back"
            android:text="@string/date_of_message"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/chat_textview_right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/msgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/sample"
            android:textColor="#000" />

        <TextView
            android:id="@+id/dateNtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/date_and_time"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imagelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="3dp"
        android:background="@drawable/chat_textview_right"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/imagetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>